--- a/music-inventory index.html
+++ b/music-inventory index.html
@@ -6,21 +6,13 @@
 </head>
 <body>
 <header>
-<nav>
-    <ul>
-        <li><a href="index.html">Startpagina</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+
 </header>
 <main>
     <section>
         <h1>Music Inventory App</h1>
         <p>Welkom bij de Music Inventory App, waar je eenvoudig jouw favoriete muziek en albums kunt bijhouden en
             beheren.</p>
-        <div class="album-afbeelding">
-            <img src="assets/img_badbunny.png" alt="Album cover van Bad Bunny - Un Verano Sin Ti" style="width: 300px; height: 300px;">
-        </div>
     </section>
     <section>
         <div>
@@ -36,28 +28,6 @@
         </div>
     </section>
 </main>
-<footer>
-    <div class="contactinformatie">
-        <p><strong>Contactinformatie</strong></p>
-        <p>Naam: Jouw Naam</p>
-        <p>Straat en Huisnummer: Jouw Straat 123</p>
-        <p>Postcode en Gemeente: 1234 AB, Jouw Gemeente</p>
-        <p>Telefoonnummer: 012-3456789</p>
-    </div>
-
-    <div class="emailinformatie">
-        <p><a href="mailto:jouw-email@example.com">Mail ons</a></p>
-    </div>
-
-    <div class="navigatie">
-        <p><strong>Navigatie</strong></p>
-        <div class="nav-item">
-            <a href="index.html">Startpagina</a>
-        </div>
-        <div class="nav-item">
-            <a href="contact.html">Contact</a>
-        </div>
-    </div>
-</footer>
+<footer></footer>
 </body>
 </html>
