--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <h1>Music Inventory App</h1>
         <p>Welkom bij de Music Inventory App, waar je eenvoudig jouw favoriete muziek en albums kunt bijhouden en
             beheren.</p>
-        <div class="album-afbeelding">
-            <img src="assets/img_badbunny.png" alt="Album cover van Bad Bunny - Un Verano Sin Ti" style="width: 300px; height: 300px;">
-        </div>
     </section>
     <section>
         <div>
@@ -32,9 +29,29 @@
                     en "Tití Me Preguntó" behaalde het wereldwijd succes en werd het geprezen voor zijn veelzijdigheid
                     en productie. Het album versterkte Bad Bunny’s positie als een van de grootste hedendaagse Latijnse
                     artiesten.</p>
+                <div class="album-afbeelding">
+                    <img src="assets/img_badbunny.png" alt="Album cover van Bad Bunny - Un Verano Sin Ti" style="width: 300px; height: 300px;">
+                </div>
             </div>
         </div>
     </section>
+    <section>
+        <div>
+            <div>
+                <h2>Drake- <span>For All The Dogs</span></h2>
+                <p>For All the Dogs is het nieuwste album van de Canadese rapper Drake, uitgebracht in 2023. Het album
+                    bevat een mix van hiphop, R&B, en pop, typische stijlen waar Drake bekend om staat. Op *For All the
+                    Dogs* verkent hij thema's zoals relaties, succes, en zelfreflectie. Met gastoptredens van artiesten
+                    zoals 21 Savage, SZA, en Bad Bunny, laat Drake een divers geluid horen. Het album werd positief
+                    ontvangen door fans en critici, en het bevestigt Drake's positie als een van de meest invloedrijke
+                    artiesten van zijn generatie.</p>
+                <div class="album-afbeelding">
+                    <img src="assets/Drake,%20for%20all%20the%20dogs.jpg" alt="Album cover van Bad Bunny - Un Verano Sin Ti" style="width: 300px; height: 300px;">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 <footer>
     <div class="contactinformatie">
